assets/css/dealer.css
#footer {
  position: fixed;
}

#main {
  overflow-y: scroll;
}

#dealers-list-container {
  width: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  margin: 0 auto;
}
#dealers-list-container .dealers_container {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding-top: 50px;
  margin-bottom: 50px;
  width: 100%;
}
#dealers-list-container .dealer {
  width: calc(25% - 10px);
  /* align-items: center; */
  height: 150px;
  background-color: #F5F5F5;
  border-radius: 10px;
  font-size: 1em;
  color: #333;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}
#dealers-list-container .dealer h2 {
  margin: 0;
  display: none;
}
#dealers-list-container .dealer p {
  margin: 0;
  bottom: 0;
  width: 100%;
  padding: 5px;
  opacity: 1;
  font-size: 18px;
  font-weight: 600;
}
#dealers-list-container .dealer button {
  margin-top: 10px;
  padding: 10px 20px;
  border: 1px solid #cccccc !important;
  color: #007bff;
  border: none;
  border-radius: 12px;
  font-size: 16px;
  cursor: pointer;
  background-color: transparent;
}
#dealers-list-container .dealer::before {
  content: "";
  position: absolute;
  width: 70px;
  height: 70px;
  left: 10%;
  top: 0;
  top: 50%;
  transform: translateY(-50%);
  margin-bottom: 20px;
  background-image: url("./images/icon.svg");
  background-repeat: no-repeat;
}
#dealers-list-container .expired {
  background-color: #ffdbdb !important;
}
#dealers-list-container .expired button {
  color: #000000 !important;
  border: 1px solid #000000 !important;
}

.dealer-checklist {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #ffffff;
  border: 1px solid #cccccc;
  padding: 10px;
  border-radius: 20px;
}

#dealer-checklist-container {
  max-width: 760px;
  margin: 0 auto;
  position: relative;
  padding: 30px;
}
#dealer-checklist-container ul {
  width: 100% !important;
  flex-direction: column;
  align-items: center !important;
  gap: 30px;
}
#dealer-checklist-container li {
  font-size: 16px;
  color: black;
  display: flex;
  width: 100%;
  background-color: #ececec;
  padding: 20px !important;
  line-height: initial !important;
  height: initial !important;
  border-radius: 12px;
  font-weight: 500;
}
#dealer-checklist-container li::before {
  display: none;
}
#dealer-checklist-container li input {
  -webkit-appearance: auto !important;
     -moz-appearance: auto !important;
          appearance: auto !important;
}
#dealer-checklist-container input[type="checkbox"] {
  transform: scale(2.5);
  background-color: transparent;
  }
#dealer-checklist-container #back-to-dealers {
  top: 10px !important;
}
#dealer-checklist-container li label {
  margin-left: 15px;
  max-width: 90%;
  }
#dealer-checklist-container p {
  margin: 0;
  bottom: 0;
  width: 100%;
  padding: 5px;
  opacity: 1;
  font-size: 18px;
  font-weight: 600;
  color: black;
  margin-bottom: 20px;
}

.dealer-checklist.show {
  display: block;
}

.add-item-button {
  margin-top: 10px;
  padding: 5px 10px;
  background-color: #007bff;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

#back-to-cities, #dealer-checklist-container #back-to-dealers {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 0;
  padding: 10px 20px;
  background-color: #62b28a;
  color: #ffffff;
  border: 1px solid #ffffff !important;
  border: none;
  border-radius: 12px;
  cursor: pointer;
}

@media only screen and (min-width: 1024px) {
  #dealers-list-container {
    max-width: 960px;
  }
}
@media only screen and (max-width: 1024px) {
  #dealers-list-container .dealer {
    width: calc(32% - 10px);
  }
  #dealers-list-container .dealer::before {
    width: 50px;
    height: 50px;
    left: 5%;
  }
}
@media only screen and (min-width: 768px) {
  #dealers-list-container .dealer {
    padding-right: 20px;
  }
  #dealers-list-container .dealer::before {
    width: 50px;
    height: 50px;
    left: 5%;
  }
  #dealers-list-container .dealer p {
    font-size: 16px;
    margin-left: auto;
    width: auto;
  }
  #dealers-list-container .dealer button {
    padding: 5px 10px;
  }
}
@media only screen and (max-width: 767px) {
  #dealers-list-container .dealer {
    width: calc(100% - 10px);
  }
}

